[gd_scene load_steps=7 format=3 uid="uid://cr6tgdhiv4r20"]

[ext_resource type="Script" uid="uid://b5su1wukmgdwg" path="res://Scripts/ui/hud.gd" id="1_e0onf"]

[sub_resource type="LabelSettings" id="LabelSettings_3gfia"]
font_size = 25
font_color = Color(0.95, 0.95, 0.95, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0onf"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_fccik"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_bjfho"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_6fbih"]
font_size = 35

[node name="HUD" type="CanvasLayer" groups=["hud_elements"]]
script = ExtResource("1_e0onf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ExperienceContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
vertical = true

[node name="BarWrapper" type="Control" parent="Control/ExperienceContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExperienceBarDelayed" type="ProgressBar" parent="Control/ExperienceContainer/BarWrapper"]
modulate = Color(0.12549, 0.14902, 0.784314, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="ExperienceBar" type="ProgressBar" parent="Control/ExperienceContainer/BarWrapper"]
modulate = Color(0.160784, 0.188235, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="LevelLabel" type="Label" parent="Control/ExperienceContainer/BarWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 20)
text = "Level : 1"
label_settings = SubResource("LabelSettings_3gfia")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 111.0
vertical = true

[node name="HealthLabel" type="Label" parent="Control/HealthContainer"]
layout_mode = 2
text = "100/100"
label_settings = SubResource("LabelSettings_e0onf")

[node name="BarWrapper" type="Control" parent="Control/HealthContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="HealthBarDelayed" type="ProgressBar" parent="Control/HealthContainer/BarWrapper"]
modulate = Color(0.815686, 0.121569, 0.121569, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="Control/HealthContainer/BarWrapper"]
modulate = Color(0.243137, 1, 0.545098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="ShieldContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
offset_left = 20.0
offset_top = 121.0
offset_right = 220.0
offset_bottom = 157.0
vertical = true

[node name="ShieldLabel" type="Label" parent="Control/ShieldContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_e0onf")
horizontal_alignment = 1

[node name="BarWrapper" type="Control" parent="Control/ShieldContainer"]
custom_minimum_size = Vector2(200, 15)
layout_mode = 2

[node name="ShieldBarDelayed" type="ProgressBar" parent="Control/ShieldContainer/BarWrapper"]
modulate = Color(0, 0.14902, 0.784314, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="ShieldBar" type="ProgressBar" parent="Control/ShieldContainer/BarWrapper"]
modulate = Color(0, 0.192157, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="MoneyContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="MoneyLabel" type="Label" parent="Control/MoneyContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "$100"
label_settings = SubResource("LabelSettings_fccik")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeContainer" type="BoxContainer" parent="Control"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 60.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="Control/TimeContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_bjfho")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningsContainer" type="BoxContainer" parent="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="WaveWarningLabel" type="Label" parent="Control/WarningsContainer"]
visible = false
modulate = Color(0.819608, 0.129412, 0, 1)
layout_mode = 2
text = "Uma horda est√° a caminho."
label_settings = SubResource("LabelSettings_6fbih")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HabilitiesContainer" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
